examples/code-formatter/src/net/kuruvila/php/parser/IndentationParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g 2009-05-27 16:15:03

package net.kuruvila.php.parser; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class IndentationParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SemiColon", "Comma", "OpenBrace", "CloseBrace", "OpenSquareBrace", "CloseSquareBrace", "OpenCurlyBrace", "CloseCurlyBrace", "ArrayAssign", "LogicalOr", "LogicalAnd", "ClassMember", "InstanceMember", "SuppressWarnings", "QuestionMark", "Dollar", "Colon", "Dot", "Ampersand", "Pipe", "Bang", "Plus", "Minus", "Asterisk", "Percent", "Forwardslash", "Tilde", "Equals", "New", "Clone", "Echo", "If", "Else", "ElseIf", "For", "Foreach", "While", "Do", "Switch", "Case", "Default", "Function", "Break", "Continue", "Return", "Global", "Static", "And", "Or", "Xor", "Instanceof", "Class", "Interface", "Extends", "Implements", "Abstract", "Var", "Const", "Modifiers", "ClassDefinition", "Block", "Params", "Apply", "Member", "Reference", "Empty", "Prefix", "Postfix", "IfExpression", "Label", "Cast", "ForInit", "ForCondition", "ForUpdate", "Field", "Method", "BodyString", "UnquotedString", "AccessModifier", "Integer", "RequireOperator", "AsignmentOperator", "EqualityOperator", "ComparisionOperator", "ShiftOperator", "PrimitiveType", "IncrementOperator", "Array", "SingleQuotedString", "DoubleQuotedString", "HereDoc", "Real", "Boolean", "FirstBodyString", "MultilineComment", "SinglelineComment", "UnixComment", "Decimal", "Hexadecimal", "Octal", "Digits", "DNum", "Exponent_DNum", "EscapeCharector", "HereDocContents", "Eol", "WhiteSpace", "'as'"
    };
    public static final int Switch=42;
    public static final int DoubleQuotedString=93;
    public static final int New=32;
    public static final int Class=55;
    public static final int Foreach=39;
    public static final int Static=50;
    public static final int Plus=25;
    public static final int Params=65;
    public static final int Hexadecimal=102;
    public static final int Exponent_DNum=106;
    public static final int Equals=31;
    public static final int Default=44;
    public static final int Implements=58;
    public static final int Comma=5;
    public static final int MultilineComment=98;
    public static final int Integer=83;
    public static final int HereDocContents=108;
    public static final int CloseBrace=7;
    public static final int Colon=20;
    public static final int Var=60;
    public static final int EqualityOperator=86;
    public static final int ElseIf=37;
    public static final int Percent=28;
    public static final int Continue=47;
    public static final int QuestionMark=18;
    public static final int ForUpdate=77;
    public static final int Dollar=19;
    public static final int ClassDefinition=63;
    public static final int UnixComment=100;
    public static final int Prefix=70;
    public static final int Cast=74;
    public static final int Abstract=59;
    public static final int Label=73;
    public static final int ForInit=75;
    public static final int Asterisk=27;
    public static final int UnquotedString=81;
    public static final int Clone=33;
    public static final int Modifiers=62;
    public static final int Const=61;
    public static final int SinglelineComment=99;
    public static final int SingleQuotedString=92;
    public static final int Instanceof=54;
    public static final int Do=41;
    public static final int InstanceMember=16;
    public static final int Field=78;
    public static final int Reference=68;
    public static final int EscapeCharector=107;
    public static final int Ampersand=22;
    public static final int For=38;
    public static final int Octal=103;
    public static final int DNum=105;
    public static final int LogicalAnd=14;
    public static final int SemiColon=4;
    public static final int If=35;
    public static final int LogicalOr=13;
    public static final int Break=46;
    public static final int OpenCurlyBrace=10;
    public static final int ArrayAssign=12;
    public static final int Array=91;
    public static final int Apply=66;
    public static final int Postfix=71;
    public static final int RequireOperator=84;
    public static final int And=51;
    public static final int IncrementOperator=90;
    public static final int Decimal=101;
    public static final int Interface=56;
    public static final int CloseSquareBrace=9;
    public static final int CloseCurlyBrace=11;
    public static final int PrimitiveType=89;
    public static final int ClassMember=15;
    public static final int ShiftOperator=88;
    public static final int Dot=21;
    public static final int Minus=26;
    public static final int Boolean=96;
    public static final int WhiteSpace=110;
    public static final int Extends=57;
    public static final int IfExpression=72;
    public static final int Echo=34;
    public static final int Real=95;
    public static final int OpenSquareBrace=8;
    public static final int Eol=109;
    public static final int AccessModifier=82;
    public static final int Or=52;
    public static final int Forwardslash=29;
    public static final int Else=36;
    public static final int BodyString=80;
    public static final int SuppressWarnings=17;
    public static final int FirstBodyString=97;
    public static final int Xor=53;
    public static final int ForCondition=76;
    public static final int ComparisionOperator=87;
    public static final int Case=43;
    public static final int Function=45;
    public static final int Pipe=23;
    public static final int Global=49;
    public static final int Tilde=30;
    public static final int Block=64;
    public static final int T__111=111;
    public static final int Method=79;
    public static final int OpenBrace=6;
    public static final int While=40;
    public static final int Bang=24;
    public static final int EOF=-1;
    public static final int Empty=69;
    public static final int AsignmentOperator=85;
    public static final int Digits=104;
    public static final int HereDoc=94;
    public static final int Member=67;
    public static final int Return=48;

    // delegates
    // delegators


        public IndentationParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public IndentationParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[172+1];
             
             
        }
        

    public String[] getTokenNames() { return IndentationParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g"; }


        public List<Level> levels = new ArrayList<Level>();
        
        private void emit(String text){
            ((TokenRewriteStream)input).insertBefore(input.LT(1), text);
        }
        
        /**
         * This function deletes all hidden tokens before the current token and not just the spaces.
         */
        private void eatPreviousSpaces(){
            TokenRewriteStream trs = ((TokenRewriteStream)input);
            Token current = trs.LT(0);
            int idx = current.getTokenIndex();
            while(idx != -1){
                Token token = trs.get(idx);
                if(token.getChannel()==Token.HIDDEN_CHANNEL){
                    trs.delete(token);
                }else{
                    break;
                }
                idx-=1;
            }
        }



    // $ANTLR start "prog"
    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:156:1: prog : ( statement )* ;
    public final void prog() throws RecognitionException {
        int prog_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return ; }
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:156:6: ( ( statement )* )
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:156:8: ( statement )*
            {
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:156:8: ( statement )*
            loop1:
            do {
                int alt1=2;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_prog869);
            	    statement();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, prog_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "prog"


    // $ANTLR start "statement"
    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:158:1: statement : ( ( simpleStatement )? BodyString | bracketedBlock[\"block\"] | classDefinition | interfaceDefinition | complexStatement | simpleStatement ';' );
    public final void statement() throws RecognitionException {
        int statement_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return ; }
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:159:5: ( ( simpleStatement )? BodyString | bracketedBlock[\"block\"] | classDefinition | interfaceDefinition | complexStatement | simpleStatement ';' )
            int alt3=6;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:159:7: ( simpleStatement )? BodyString
                    {
                    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:159:7: ( simpleStatement )?
                    int alt2=2;
                    alt2 = dfa2.predict(input);
                    switch (alt2) {
                        case 1 :
                            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:0:0: simpleStatement
                            {
                            pushFollow(FOLLOW_simpleStatement_in_statement882);
                            simpleStatement();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;

                    }

                    match(input,BodyString,FOLLOW_BodyString_in_statement885); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:160:7: bracketedBlock[\"block\"]
                    {
                    pushFollow(FOLLOW_bracketedBlock_in_statement893);
                    bracketedBlock("block");

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:162:7: classDefinition
                    {
                    pushFollow(FOLLOW_classDefinition_in_statement907);
                    classDefinition();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 4 :
                    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:163:7: interfaceDefinition
                    {
                    pushFollow(FOLLOW_interfaceDefinition_in_statement915);
                    interfaceDefinition();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 5 :
                    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:164:7: complexStatement
                    {
                    pushFollow(FOLLOW_complexStatement_in_statement923);
                    complexStatement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 6 :
                    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:165:7: simpleStatement ';'
                    {
                    pushFollow(FOLLOW_simpleStatement_in_statement931);
                    simpleStatement();

                    state._fsp--;
                    if (state.failed) return ;
                    match(input,SemiColon,FOLLOW_SemiColon_in_statement933); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, statement_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "statement"


    // $ANTLR start "bracketedBlock"
    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:168:1: bracketedBlock[String blockType] : '{' ( statement )* '}' ;
    public final void bracketedBlock(String blockType) throws RecognitionException {
        int bracketedBlock_StartIndex = input.index();

            Level level = new Level();
            level.name=blockType;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return ; }
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:176:5: ( '{' ( statement )* '}' )
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:176:7: '{' ( statement )* '}'
            {
            if ( state.backtracking==0 ) {
               level.start=input.LT(1).getTokenIndex(); 
            }
            match(input,OpenCurlyBrace,FOLLOW_OpenCurlyBrace_in_bracketedBlock966); if (state.failed) return ;
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:177:9: ( statement )*
            loop4:
            do {
                int alt4=2;
                alt4 = dfa4.predict(input);
                switch (alt4) {
            	case 1 :
            	    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_bracketedBlock977);
            	    statement();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            if ( state.backtracking==0 ) {
               level.end=input.LT(-1).getTokenIndex(); 
            }
            match(input,CloseCurlyBrace,FOLLOW_CloseCurlyBrace_in_bracketedBlock991); if (state.failed) return ;

            }

            if ( state.backtracking==0 ) {

                  levels.add(level);

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, bracketedBlock_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "bracketedBlock"


    // $ANTLR start "interfaceDefinition"
    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:181:1: interfaceDefinition : Interface interfaceName= UnquotedString ( interfaceExtends )? OpenCurlyBrace ( interfaceMember )* CloseCurlyBrace ;
    public final void interfaceDefinition() throws RecognitionException {
        int interfaceDefinition_StartIndex = input.index();
        Token interfaceName=null;


            Level level = new Level();
            level.name="interface";

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return ; }
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:189:5: ( Interface interfaceName= UnquotedString ( interfaceExtends )? OpenCurlyBrace ( interfaceMember )* CloseCurlyBrace )
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:189:7: Interface interfaceName= UnquotedString ( interfaceExtends )? OpenCurlyBrace ( interfaceMember )* CloseCurlyBrace
            {
            match(input,Interface,FOLLOW_Interface_in_interfaceDefinition1016); if (state.failed) return ;
            interfaceName=(Token)match(input,UnquotedString,FOLLOW_UnquotedString_in_interfaceDefinition1020); if (state.failed) return ;
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:189:46: ( interfaceExtends )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==Extends) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:0:0: interfaceExtends
                    {
                    pushFollow(FOLLOW_interfaceExtends_in_interfaceDefinition1022);
                    interfaceExtends();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }

            if ( state.backtracking==0 ) {
              level.start=input.LT(1).getTokenIndex();
            }
            match(input,OpenCurlyBrace,FOLLOW_OpenCurlyBrace_in_interfaceDefinition1034); if (state.failed) return ;
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:191:9: ( interfaceMember )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==Function||LA6_0==Static||LA6_0==Abstract||LA6_0==Const||LA6_0==AccessModifier) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:0:0: interfaceMember
            	    {
            	    pushFollow(FOLLOW_interfaceMember_in_interfaceDefinition1044);
            	    interfaceMember();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            if ( state.backtracking==0 ) {
              level.end=input.LT(-1).getTokenIndex();
            }
            match(input,CloseCurlyBrace,FOLLOW_CloseCurlyBrace_in_interfaceDefinition1056); if (state.failed) return ;

            }

            if ( state.backtracking==0 ) {

                  levels.add(level);

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, interfaceDefinition_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "interfaceDefinition"


    // $ANTLR start "interfaceExtends"
    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:195:1: interfaceExtends : Extends UnquotedString ( Comma UnquotedString )* ;
    public final void interfaceExtends() throws RecognitionException {
        int interfaceExtends_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return ; }
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:196:5: ( Extends UnquotedString ( Comma UnquotedString )* )
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:196:7: Extends UnquotedString ( Comma UnquotedString )*
            {
            match(input,Extends,FOLLOW_Extends_in_interfaceExtends1077); if (state.failed) return ;
            match(input,UnquotedString,FOLLOW_UnquotedString_in_interfaceExtends1080); if (state.failed) return ;
            // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:196:31: ( Comma UnquotedString )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==Comma) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /Users/sidharth/Documents/code/temp/php_parser/examples/code-formatter/grammars/Indentation.g:196:32: Comma UnquotedString
            	    {
            	    match(input,Comma,FOLLOW_Comma_in_interfaceExtends1083); if (state.failed) return ;
            	    match(input,UnquotedString,FOLLOW_UnquotedString_in_interfaceExtends1086); if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, interfaceExtends_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "interfaceExtends"

